styles/components/gallery/_header.scss
// scss-lint:disable LeadingZero, PropertySortOrder
.gallery__header {
    $header-height: 65px;

    $ipad-only: "#{$screen} and (min-width:1024px) and (max-width:1024px)" !default;

    border-bottom: 1px solid $line-color;
    height: $header-height;
    padding: 0;
    z-index: 1;

    .gallery__header-container {
        position: relative;
        overflow: hidden;

        @media (min-width: 1500px) {
            max-width: 1560px;
        }
    }

    .hamburger-menu {
        border: 0;
        color: $color-primary;
        float: left;

        &:focus,
        &:active,
        &:hover {
            background: transparent;
        }
    }

    .gallery__logo {
        float: left;
        font-size: 1.7em;
        line-height: $header-height;
        padding: 0 0 0 15px;
        position: relative;

        a {
            color: $color-primary;
        }

        @media (min-width:1500px) {
            padding-left: 0;
        }

        .icon-logo {
            background-image: url('../../images/logo/homes-logo-mobile.svg');
            background-repeat: no-repeat;
            background-size: 115px 35px;
            display: inline-block;
            height: 35px;
            margin: 0 3px;
            vertical-align: middle;
            width: 115px;

            @media #{$medium-up} {
                background-image: url('../../images/logo/homes-logo-tablet.svg');
                background-size: 287px 23px;
                height: 23px;
                width: 287px;
            }
        }
    }

    .gallery__title {
        @include type-gallery-header;

        margin: 0 0 0 35px;
        float: left;

        @media #{$large-up} {
            line-height: 72px;
            box-sizing: border-box;
            overflow: hidden;
            padding: 0 390px 0 300px;
            position: absolute;
            text-overflow: ellipsis;
            white-space: nowrap;
            width: 100%;
            z-index: -1;
        }

        @media #{$ipad-only} {
            letter-spacing: 0.01em;
            font-size: 20px;
            margin: 2px 0 0 35px;
        }
    }

    .gallery__slide-count {
        @extend .hide-for-large-up;

        font-family: $font-family-sans-serif-primary;
        font-size: 15px;
        margin: 0;
        float: right;
        color: $color-grey-darker;
        line-height: 65px;
        padding-right: 15px;
    }

    .gallery__exit {
        float: right;
        color: $color-primary;
        line-height: 65px;
    }
}

